# super_tic_tac_toe

./: components.json  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/pattern_finder/: Cargo.toml
src-tauri/crates/pattern_finder/src/: lib.rs
src-tauri/src/: board.rs  bot.rs  cell.rs  lib.rs  main.rs  mark.rs  player.rs  simple_cel.rs  simple_cell.rs  ultimate_cell.rs  utils.rs
src-tauri/src/cell/: marked_cell.rs  mod.rs  simple_cell.rs  ultimate_cell.rs
src-tauri/src/commands/: mod.rs
src/components/: background-particles.tsx  board-cell.tsx  cell-index.tsx  cell.tsx  grid.tsx  marked-cell.tsx
src/components/ui/: button.tsx
src/context/: app.context.ts
src/features/: big-cell.tsx  ultimate-cell.tsx
src/lib/utils/: index.ts
src/state/: game.state.ts  main-view.state.ts  view.state.ts
src/types/: index.ts
src/views/: game.tsx  home.tsx  index.ts
src/widgets/: Header.tsx  board.tsx
